--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
 
   <build>
     <finalName>pirate-paste</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>8.1.8.v20121106</version>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
