--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,61 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+<web-app
+    xmlns="http://java.sun.com/xml/ns/javaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+    metadata-complete="false"
+    version="2.5">
+
+  <display-name>Pirate Paste</display-name>
+
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <trim-directive-whitespaces>true</trim-directive-whitespaces>
+    </jsp-property-group>
+  </jsp-config>
+
+  <filter>
+    <display-name>Stripes Filter</display-name>
+    <filter-name>StripesFilter</filter-name>
+    <filter-class>net.sourceforge.stripes.controller.StripesFilter</filter-class>
+    <init-param>
+      <param-name>ActionResolver.Packages</param-name>
+      <param-value>net.caseydunham.pirate.stripes.action</param-value>
+    </init-param>
+    <init-param>
+      <param-name>ActionBeanContext.Class</param-name>
+      <param-value>net.caseydunham.pirate.stripes.BaseActionContext</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>StripesFilter</filter-name>
+    <url-pattern>*.jsp</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>DynamicMappingFilter</filter-name>
+    <filter-class>net.sourceforge.stripes.controller.DynamicMappingFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>DynamicMappingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+    <dispatcher>ERROR</dispatcher>
+  </filter-mapping>
+
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
+
+  <session-config>
+    <session-timeout>20</session-timeout>
+  </session-config>
+
 </web-app>
