--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,10 @@
       <param-name>ActionResolver.Packages</param-name>
       <param-value>net.caseydunham.pirate.stripes.action</param-value>
     </init-param>
+    <init-param>
+      <param-name>LocalePicker.Locales</param-name>
+      <param-value>en_US:UTF-8</param-value>
+    </init-param>
   </filter>
 
   <filter-mapping>
