--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <artifactId>stripes</artifactId>
       <version>1.5.7</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
