--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
     <filter-name>StripesFilter</filter-name>
     <filter-class>net.sourceforge.stripes.controller.StripesFilter</filter-class>
     <init-param>
+      <param-name>Interceptor.Classes</param-name>
+      <param-value>net.caseydunham.pirate.stripes.interceptor.HibernateInterceptor</param-value>
+    </init-param>
+    <init-param>
       <param-name>ActionResolver.Packages</param-name>
       <param-value>net.caseydunham.pirate.stripes.action</param-value>
     </init-param>
